service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-todo-service
  namespace: rauneet

spec:
  type: LoadBalancer
  selector:
    app: django-todo

  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
