ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-django-todo
  namespace: rauneet
spec:
  rules:
  - host: "django-todo-example"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: django-todo-service
              port:
                number: 80
